--- a/apache/apache.yaml
+++ b/apache/apache.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: apache
-  namespace: apache
+  namespace: apache1
 spec:
   selector:
     matchLabels:
