--- a/apache/apache.yaml
+++ b/apache/apache.yaml
@@ -35,7 +35,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: apache
-  namespace: apache
+  namespace: apache1
   labels:
     app: apache
 spec:
